Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -177,10 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/Excise/-972264986/tagnew</li>
-
-<li>$:/state/showeditpreview</li>
-
 <li>$:/state/sidebar</li>
 
 <li>$:/status/IsAnonymous</li>
@@ -194,8 +190,6 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/search</li>
 
 <li>$:/theme</li>
 
@@ -424,6 +418,8 @@ Error message and password prompt
 <li>Quantum Temporal Logic by Nengkun Yu</li>
 
 <li>Real Numbers</li>
+
+<li>Recent Progress in Model-Based Learning by Csaba Szepesvari</li>
 
 <li>Recurrent Neural Networks</li>
 
@@ -9993,13 +9989,7 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200227191403895" modified="20200227191403895" title="$:/state/Excise/-972264986/tagnew" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200227181455207" modified="20200227225115596" title="$:/state/showeditpreview" revision="2" bag="default">
-<pre>no</pre>
-</div>
-<div created="20200227062221298" modified="20200227194238787" title="$:/state/sidebar" revision="4" bag="default">
+<div created="20200228001751266" modified="20200228012154634" title="$:/state/sidebar" revision="2" bag="default">
 <pre>yes</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
@@ -10014,7 +10004,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200227062151970" list="[[Reinforcement Learning: David Silver Course]] [[Case Study: Classic Games in RL]]" modified="20200227194432582" title="$:/StoryList" revision="117" bag="default">
+<div list="" title="$:/StoryList" revision="10" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10062,11 +10052,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;900&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10074,9 +10064,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200227062151050" modified="20200227225550278" title="$:/temp/search" revision="51" bag="default">
-<pre></pre>
 </div>
 <div created="20200227023745997" modified="20200227023751835" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
@@ -10712,7 +10699,7 @@ e.g. Grouping age in brackets such as 0-5, 5-10, 10-20 etc. to indicate to the m
 
 Opposite of [[One-Hot Encoding]] in a sense.</pre>
 </div>
-<div created="20200227194442898" modified="20200227233038521" tags="[[reinforcement learning]]" title="Case Study: Classic Games in RL" revision="6" bag="default">
+<div created="20200227194442898" modified="20200227233039676" tags="[[reinforcement learning]]" title="Case Study: Classic Games in RL" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__State of the Art in RL in Games__
 
 * Simples rules, deep concepts
@@ -11303,7 +11290,7 @@ Millions of Instructions Per Second = Instruction Count / Execution Time * 10^6 
 
 </pre>
 </div>
-<div created="20200227071853237" modified="20200227080337474" tags="topology" title="Connectedness" revision="4" bag="default">
+<div created="20200227071853237" modified="20200227080338589" tags="topology" title="Connectedness" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Intuition: We want to study topological spaces that cannot be decomposed into disjoint topological spaces as the subspaces could be studied separately more effectively. 
 
 Def: A topological space $$X$$ is disconnected if there are closed and open non-empty subsets (clopen) U and V of X s.t. U and V are disjoint and X is their union. Or in other words if there exists a set that is both closed and open that is not equal to the empty set or X, then X is disconnected as the complement is also closed and open.
@@ -11344,7 +11331,7 @@ Proof: Any interval is homeomorphic to one of $$[0, 1], [0, 1), (0, 1)$$
 * Thus every compact interval of $$R$$ is connected 
 * Since $$[0, 1)$$ and $$(0, 1)$$ can be expressed as the union of sequences of compact intervals, each element in these sequence is connected and thus by Thm 2, the sets are connected. </pre>
 </div>
-<div created="20200227192844166" modified="20200227192844166" tags="[[Exploration and Exploitation]]" title="Contextual Bandits" revision="1" bag="default">
+<div created="20200227192844166" modified="20200227192845427" tags="[[Exploration and Exploitation]]" title="Contextual Bandits" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* A contextual bandit is a tuple $$&lt;A, S, R&gt;$$
 * A is a known set of actions
 * $$S = P[S]$$ is an unknown distribution over states 
@@ -11642,7 +11629,7 @@ tbd
 <div author="" created="20191124064904814" modified="20191124064949779" tags="research probability math" title="Do Calculus" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://arxiv.org/pdf/1305.5506.pdf</pre>
 </div>
-<div created="20200227230337957" modified="20200227230337957" title="Draft of 'Case Study: Classic Games in RL'" revision="6187" bag="default">
+<div created="20200227230337957" modified="20200227230339838" title="Draft of 'Case Study: Classic Games in RL'" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__State of the Art in RL in Games__
 
 * Simples rules, deep concepts
@@ -11761,7 +11748,7 @@ e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accur
 <div created="20200131001053606" modified="20200131002052629" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://www.cal.cs.ucla.edu/cgi-bin/webevent.cgi?cmd=showevent&amp;ncmd=calmonth&amp;cal=cal2&amp;id=1578079202-22878-1&amp;ncals=&amp;y=2020&amp;m=01&amp;d=14&amp;token=&amp;sb=0&amp;cf=cal&amp;lc=calmonth&amp;swe=1&amp;set=1&amp;sa=0&amp;sort=e,m,t&amp;ws=0&amp;sib=1&amp;de=1&amp;tf=0</pre>
 </div>
-<div created="20200224070942655" modified="20200227194223003" tags="[[reinforcement learning]]" title="Exploration and Exploitation" type="text/vnd.tiddlywiki" revision="13" bag="default">
+<div created="20200224070942655" modified="20200227194224350" tags="[[reinforcement learning]]" title="Exploration and Exploitation" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__[[Overview of Exploration v/s Exploitation]]__
 
 {{Overview of Exploration v/s Exploitation}}
@@ -11778,7 +11765,7 @@ __[[Exploration and Exploitation in MDPs]]__
 
 {{Exploration and Exploitation in MDPs}}</pre>
 </div>
-<div created="20200227194209143" modified="20200227194209143" tags="[[Exploration and Exploitation]]" title="Exploration and Exploitation in MDPs" revision="1" bag="default">
+<div created="20200227194209143" modified="20200227194210427" tags="[[Exploration and Exploitation]]" title="Exploration and Exploitation in MDPs" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Principles discussed in [[Multi-Armed Bandits]] apply to MDPs
 
 Optimistic Initialization with Model-Free RL: 
@@ -12747,7 +12734,7 @@ What if $$X^TX$$ is not invertible:
 
 Deal with these problems in [[Ridge Regression]]</pre>
 </div>
-<div created="20200227062408408" modified="20200227070915967" tags="topology" title="Locally Compact Spaces" revision="4" bag="default">
+<div created="20200227062408408" modified="20200227070917134" tags="topology" title="Locally Compact Spaces" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Def: A topological space is //locally compact// if for each $$p \in X$$, $$\exists W$$ open s.t. $$p \in W$$ and $$\bar{W}$$ is compact. (topological property as described only in terms of open sets)
 
 Fact: Any compact space is locally compact.
@@ -13244,7 +13231,7 @@ Incremental Monte-Carlo Updates:
 * For non-stationary problems, useful to track running mean i.e. forget old episodes -&gt; $$V(S_t) \leftarrow V(S_t) + \alpha (G_t - V(S_t))$$ - exponential forgetting rate from the constant $$\alpha$$
 </pre>
 </div>
-<div created="20200227191404666" modified="20200227191820736" tags="[[Exploration and Exploitation]]" title="Multi-Armed Bandits" revision="2" bag="default">
+<div created="20200227191404666" modified="20200227191822220" tags="[[Exploration and Exploitation]]" title="Multi-Armed Bandits" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* A tuple &lt;A, R&gt; where A is a known set of actions (arms) and $$R^a(r) = P[r | a]$$ is an unknown probability distribution over rewards
 * Every action 'corresponds' to 'one machine' - https://imgur.com/sCmUFhu
 * At each step t the agent selects an action $$a_t \in A$$ and the environment generates a reward $$r_t \sim R^{a_t}$$
@@ -13727,7 +13714,7 @@ In April 2008, Google launched App Engine, with a free trial version limited to 
 
 The original intent of PaaS was to simplify the code-writing process for developers, with the infrastructure and operations handled by the PaaS provider. Originally, all ~PaaSes were in the public cloud. Because many companies did not want to have everything in the public cloud, private and hybrid PaaS options (managed by internal IT departments) were created.</pre>
 </div>
-<div created="20200227075022683" modified="20200227080319839" tags="topology" title="Path Connectedness" revision="4" bag="default">
+<div created="20200227075022683" modified="20200227080320938" tags="topology" title="Path Connectedness" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Intuition: A formalism of the idea that a geometric figure is all one piece if it is possible to go from any point to any other point via a curve that never leaves the figure
 
 Def: A path from $$x_0$$ to $$x_1$$ is a continuous function $$\gamma: [0, 1] \rightarrow X$$ s.t $$\gamma(0) = x_0$$ and $$\gamma(1) = x_1$$
@@ -13861,7 +13848,7 @@ Use the bellman expectation equation - https://imgur.com/1xnlKmN and use the val
 
 Small Grid-world Example: https://imgur.com/rAdbMUM, https://imgur.com/ZduqlSZ, https://imgur.com/lNm7S5N - intuition is how just computing a random policy's value function can give us a better policy and in this case the greedy policy based on the value function gives us the optimal policy after just 3 iterations</pre>
 </div>
-<div created="20200222213336891" modified="20200227175035967" tags="[[reinforcement learning]]" title="Policy Gradient Methods" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200222213336891" modified="20200227175037287" tags="[[reinforcement learning]]" title="Policy Gradient Methods" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>[[Value Function Approximation]] discussed approximating both state and action-value function using parameters $$\theta$$ and policy generated directly from value function 
 
 Here, we will directly parametrize the policy: $$\pi_\theta(s, a) = P[a | s, \theta]$$ - can again think of as an arbitrary function approximator. A probability distribution conditioned both on state and parameters. 
@@ -14145,6 +14132,77 @@ Decidability of QTL formula - programs without nondeterminism, </pre>
 <div created="20200131072027431" modified="20200131072106707" tags="incomplete [[real analysis]]" title="Real Numbers" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
+<div created="20200228001353654" modified="20200228011930318" tags="[[talk summary]] [[reinforcement learning]]" title="Recent Progress in Model-Based Learning by Csaba Szepesvari" revision="2" bag="default">
+<pre>Reinforcement Learning defined as a field that solves certain types of Tasks: 
+
+* Online RL - Given: sequential access to M, Goal: Take actions to maximize expected return 
+* Batch RL - Given: data from past interactions with M, Goal: find a policy with high expected return - no explorations v/s exploitation tradeoff
+* Planning with a simulator / model - Given: a model/simulator of M, Goal: find a policy with high expected return with a few queries 
+
+What's in the brain:
+
+* Policy / Actor
+* Value Function / Critic
+* Model
+* State estimation
+* Interact with environment
+
+Advantages of Model-Based RL - Generalization through inference 
+
+* Time invariance - same transitions at all time-step 
+* Ignore some noise and get compact representation
+
+But where is Model used then? Model only used in AlphaGo as here we know the entire environment is entirely known
+
+Why is this the case:
+
+* Inference (Planning) can be hard
+* Model is not exactly reality, so the optimal policy on your model may not be optimal on the true environment
+* What to model? What granularity? Observations? How to learn the model? What can you do in your bounds?
+
+Computing optimal policy on MDP is P-complete
+
+How do we plan with large models?
+
+* Search trees e.g. Monte Carlo Tree Search, Model Predictive Control
+* Dynamic Programming
+* Hybrids (AlphaGo / AlphaZero)
+
+Planning through Value Function Computation:
+
+* Optimal action-value function Q* encoded optimal policy
+* Finding Q* is also P-complete
+* Guess: it lies close to $$span(\phi)$$ - features are $$\phi$$ and they can kinda characterize the value function
+
+Approximate Linear Programming for MDPs - number of variables limited now to number of features as opposed to number of states
+
+Methods: if feature vectors for the small number of states s.t. all other states features would be linearly combo of this core set
+
+But features must also be descriptive enough to learn successfully
+
+Meta-learning to learn a policy to learn the core set
+
+Magic:
+
+* Planning should be easy
+* When P = QR, the transition kernel decomposes into R: encoder and Q: decoder 
+* The decomposition allows us to QRQRQRQ -&gt; Q(RQ)(RQ) -&gt; then we are now doing stuff low dimensional matrices
+
+Issues:
+
+* Does $$u*$$ exists
+* $$\| R'Q \| \leq 1$$
+* $$B = \| Q \| &lt; \infty$$
+
+How to learn Q and R? Linear least-squares
+
+Goal: QR = P
+Given data $$(s_i, a_i, s_i') \sim P(\cdot | s_i, a_i)$$ and 
+
+Theorem: (Whitt 1978): model errors ii learned friendly
+
+</pre>
+</div>
 <div created="20200227061342344" modified="20200227061351410" tags="[[deep learning]]" title="Recurrent Neural Networks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://stanford.edu/~shervine/teaching/cs-230/cheatsheet-recurrent-neural-networks</pre>
 </div>
@@ -14268,7 +14326,7 @@ reduction step 2 - stochastic gradient langevin dynamics (SGLD) - instead of lea
 implementable in entropic mirror descent - hsieh et al 2019
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191125022514242" modified="20200227194430754" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div author="Siddharth Joshi" created="20191125022514242" modified="20200227194431825" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Part 1: Elementary Reinforcement Learning
 
 # [[Introduction to Reinforcement Learning]]
@@ -15149,7 +15207,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 * Modern Cryptography - https://www.microsoft.com/en-us/research/project/blockchain/, https://www.microsoft.com/en-us/research/project/multi-party-computation/
 * Research efforts in joining symbolic AI to Neural Networks</pre>
 </div>
-<div created="20200219031441151" modified="20200227070952495" tags="topology" title="Topological Spaces" type="text/vnd.tiddlywiki" revision="2" bag="default">
+<div created="20200219031441151" modified="20200227070953567" tags="topology" title="Topological Spaces" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* [[Basics of Topological Spaces]]
 * [[Subspaces of Topological Spaces]]
 * [[Continuous Functions in Topological Spaces]]
